# sdf-gen

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: bezier.rs  fill.frag  fill.vert  main.rs  sdf.comp  shader_include.rs
